<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:textStyle="bold"
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/li_n_h"
        android:textColor="#307333"
        android:textSize="40sp"
        android:fontFamily="@font/semibold"/>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <EditText
        android:id="@+id/edit_text_to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#307333"
        android:focusable="false"
        android:inputType="textEmailAddress"
        android:text="ngochithanhdat02@gmail.com"
        android:textStyle="italic"
        android:textColor="#307333"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ti_u"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#307333"
        android:inputType="textEmailSubject"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_i_dung"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#307333"
        android:lines="10"
        android:gravity="start|top"/>
    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/g_i"
        android:textColor="#fff" />
</LinearLayout>