<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/lightwhite"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <!--        <ImageView-->
        <!--            android:id="@+id/ChangeLanguageIcon"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:src="@drawable/ic_baseline_language_24"/>-->
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="200dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ng_k2"
            android:id="@+id/txtdangki"
            android:gravity="end"
            android:textColor="@color/blackcolor"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dancing_script_medium"
            android:text="@string/ng_nh_p"
            android:layout_gravity="center"
            android:textColor="@color/blackcolor"
            android:textSize="25dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/img"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/logo_app"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:hint="@string/email1"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/btn"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="355dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:elevation="5dp"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:paddingLeft="15dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/ng_nh_p1"
            android:textAllCaps="false"
            android:background="@drawable/joinbtn"
            android:textColor="@color/whitecolor"/>
        <TextView
            android:id="@+id/txtdangki1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ch_a_ng_k"
            android:textColor="@color/fullwhite"
            android:layout_marginTop="25dp"/>
    </LinearLayout>

</LinearLayout>