<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.ui.cart.CartFragment">

    <TextView
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center"
        android:text="@string/gi_h_ng_tr_ng"
        android:id="@+id/txtgiohangtrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3B973E"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Giỏ Hàng"
        tools:layout_editor_absoluteX="0dp" >
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="5dp"
        android:id="@+id/recycleviewgiohang"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:id="@+id/layout1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btnmuahang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/t_ng_ti_n"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#721183"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:id="@+id/txttongtien"
            android:text="25.000 đ "
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#721183"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/btnmuahang"
        android:text="@string/mua_h_ng"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>